# QtAgOpenGPS

./: .gitignore  .gitmodules  CMakeLists.txt  QtAgOpenGPS.qmlproject  QtAgOpenGPS.qmlproject.qtds.0041e84  QtAgOpenGPS_en_EN.ts  QtAgOpenGPS_fr_FR.ts  QtAgOpenGPS_ru_RU.ts  TODO.md  agopengps.qrc  aogproperties.cpp  aogproperty.cpp  aogrenderer.cpp  aogrenderer.h  aogsettings.cpp  aogsettings.h  backend.h  formgps.cpp  formgps.h  formgps_classcallbacks.cpp  formgps_opengl.cpp  formgps_position.cpp  formgps_saveopen.cpp  formgps_sections.cpp  formgps_settings.cpp  formgps_sim.cpp  formgps_udpcomm.cpp  formgps_ui.cpp  formgps_ui_boundary.cpp  formgps_ui_field.cpp  formgps_ui_tracks.cpp  formgps_ui_vehicle.cpp  formheadache.cpp  formheadache.h  formheadland.cpp  formheadland.h  generate_settings.py  generate_settings.sh  glutils.cpp  glutils.h  (+25 more)
.qt/: QtDeploySupport.cmake
App/autogen/: environment.h
QtAgIO/: CMakeLists.txt  Main.qml  agio.qrc  agioproperties.cpp  agioproperty.cpp  agioproperty.h  agiosettings.cpp  agiosettings.h  bluetoothlistwrapper.cpp  bluetoothlistwrapper.h  formloop.cpp  formloop.h  formloop_formudp.cpp  formloop_nmea.cpp  formloop_ntripcomm.cpp  formloop_serial.cpp  formloop_settings.cpp  formloop_udpcomm.cpp  formloop_ui.cpp  main.cpp  properties.h  qmlsettings.cpp  qmlsettings.h  qmlsettings_addkeys.cpp
QtAgIO/inc/: bluetoothmanager.h
QtAgIO/qml/: AdvancedMenu.qml  AgDiag.qml  AgIO.qml  AgIOInterface.qml  AgIOTheme.qml  BluetoothMenu.qml  CloseAgIO.qml  EthernetConfig.qml  GPSInfo.qml  NTrip.qml  SettingsWindow.qml  UnitConversion.qml
QtAgIO/qml/components/: ButtonColor.qml  CheckBoxCustomized.qml  ComboBoxCustomized.qml  ExpandableColumn.qml  IconButton.qml  IconButtonColor.qml  IconButtonText.qml  IconButtonTextBeside.qml  IconButtonTransparent.qml  LatLonTextField.qml  Message.qml  MoveableDialog.qml  MoveablePopup.qml  OutlineText.qml  PinButtons.qml  ScrollViewExpandableColumn.qml  ScrollableTextArea.qml  SectionButton.qml  SectionButtons.qml  SerialTerminalAgio.qml  ShortcutCustomized.qml  SliderCustomized.qml  Spacer.qml  SpinBoxCM.qml  SpinBoxCustomized.qml  SpinBoxKM.qml  SpinBoxM.qml  TestSectionButtons.qml  Text.qml  TextLine.qml  TimedMessage.qml  TimedRectangle.qml  TitleFrame.qml  TopLine.qml
QtAgIO/qml/interfaces/: NTripInterface.qml
QtAgIO/src/: bluetoothdevicelist.cpp  bluetoothdevicelist.h  bluetoothmanager.cpp  bluetoothmanager.h  glm.h
android/: AndroidManifest.xml
backend/: backend.cpp  backend.h  blockage.cpp  blockage.h  blockagemodel.cpp  blockagemodel.h  boundaryinterface.cpp  boundaryinterface.h  boundarylinemodel.cpp  boundarylinemodel.h  camera.cpp  camera.h  fieldinfo.h  fieldinterface.cpp  fieldinterface.h  fixframe.h  flagmodel.cpp  flagmodel.h  flagsinterface.cpp  flagsinterface.h  headlandinterface.cpp  headlandinterface.h  mainwindowstate.cpp  mainwindowstate.h  modulecomm.cpp  modulecomm.h  ploughcontrol.cpp  ploughcontrol.h  ratecontrol.cpp  ratecontrol.h  recordedpath.cpp  recordedpath.h  sectionbuttonsmodel.cpp  sectionproperties.h  sectionsmodel.cpp  sectionsmodel.h  siminterface.cpp  siminterface.h  steerconfig.cpp  tool.cpp  (+8 more)
classes/: agioservice.cpp  agioservice.h  agioservice_udp.cpp  agshareclient.cpp  agshareclient.h  cabcurve.cpp  cabcurve.h  cabline.cpp  cabline.h  cahrs.cpp  cboundary.cpp  cboundary.h  ccamera.cpp  ccamera.h  ccontour.cpp  ccontour.h  cdubins.cpp  cfence.cpp  cfielddata.cpp  cfielddata.h  cguidance.cpp  chead.cpp  cmodulecomm.cpp  cmodulecomm.h  cnmea.cpp  cnmea.h  cpatches.cpp  cpatches.h  cpgn.cpp  cpgn.h  crecordedpath.cpp  crecordedpath.h  csection.h  csim.cpp  ctool.cpp  ctool.h  ctrack.cpp  ctrack.h  ctraffic.cpp  ctraffic.h  (+30 more)
classes/agshare/: agsharedownloader.cpp  agsharedownloader.h  agsharedtos.h  agshareuploader.cpp  agshareuploader.h
controllers/: aogcontroller.cpp  aogcontroller.h
i18n/: qml_en.ts  qml_fr.ts  qml_ru.ts
models/: ploughmodel.cpp  ploughmodel.h  rcmodel.cpp  rcmodel.h  sectionbuttonsmodel.h  toolswithsectionsmodel.cpp
qml/: ABCurvePicker.qml  ABLinePicker.qml  AOGInterface.qml  AOGRenderer.qml  AOGTheme.qml  AgIOTest.qml  AgIOTestWindow.qml  AutoUturnBtn.qml  BlockageData.qml  DisplayButtons.qml  GPSData.qml  HamburgerMenu.qml  HeadAcheDesigner.qml  HeadlandDesigner.qml  LightBar.qml  LineEditor.qml  LineName.qml  MachineData.qml  MainBottomRow.qml  MainLeftColumn.qml  MainRightColumn.qml  MainTopPanel.qml  MainWindow.qml  MainWindowTest.qml  ManualTurnBtns.qml  MockSettings.qml  RateData.qml  SetSimCoords.qml  SimController.qml  TestMainWindow.qml  ToolsWindow.qml  TrackNum.qml  TramLinesEditor.qml  UnitConversion.qml
qml/AOG/: Utils.qml  qmldir
qml/Interface/: MockTracksInterface.qml  MockVehicleInterface.qml  TracksInterface.qml  qmldir
qml/Interfaces/: TracksInterface.qml
qml/Settings/: MockSettings.qml
qml/agio/: AdvancedMenu.qml  AgIO.qml  AgIOInterface.qml  AgIOTestWindow.qml  AgIOTheme.qml  BluetoothMenu.qml  EthernetConfig.qml  GPSInfo.qml  ModuleConnectionTest.qml  NTrip.qml  SettingsWindow.qml  UnitConversion.qml
qml/boundary/: BoundaryMenu.qml  BoundaryOSM.qml  BoundaryRecord.qml  (+1 more)
scenegraph/: aoggeometry.cpp  aoggeometry.h  aogmaterial.cpp  aogmaterial.h  boundariesnode.cpp  boundariesnode.h  boundariesproperties.cpp  boundariesproperties.h  boundarynode.cpp  boundarynode.h  boundaryproperties.h  dashedthicklinematerial.cpp  dashedthicklinematerial.h  fieldsurfacenode.cpp  fieldsurfacenode.h  fieldviewitem.cpp  fieldviewitem.h  gridnode.cpp  gridnode.h  gridproperties.h  materials.h  roundpointmaterial.h  roundpointsizematerial.h  sectionproperties.cpp  sectionproperties.h  texturefactory.cpp  texturefactory.h  thicklinecolorsmaterial.cpp  thicklinecolorsmaterial.h  thicklinematerial.cpp  thicklinematerial.h  toolproperties.cpp  toolproperties.h  toolsnode.cpp  toolsnode.h  toolsproperties.cpp  toolsproperties.h  vehiclenode.cpp  vehiclenode.h  vehicleproperties.cpp  (+1 more)
shaders/: colortex_fshader.frag  dashedthickline.frag  dashedthickline.vert  thickline.frag  thickline.vert  thicklinecolors.frag  thicklinecolors.vert
(+105 files in other folders)
